adding refresh handler for main page

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <META HTTP-EQUIV="Refresh" CONTENT="3600">
   <title>Magic Mirror</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
